# communiction_system

./: .gitignore  .gitmodules  CMakeLists.txt
include/: GUI.hpp  ImGUI_interface.hpp  channel.hpp  channel_lib.hpp  find_peaks.hpp  rx_lib.hpp  structures.hpp  tx_lib.hpp
include/PHY/: rx_dsp.hpp  tx_dsp.hpp
scripts/: build.sh  install.sh
src/: main.cpp
src/GUI/: Linux.cpp  macOS.mm
src/PHY/rx_dsp/: OFDM_rx.cpp  decoder.cpp  deintervaler.cpp  demodulator.cpp  find_peaks.cpp  rx_run.cpp
src/PHY/tx_dsp/: OFDM_tx.cpp  modulator.cpp  preparing_bits.cpp  tx_run.cpp
src/RX/: decoder.cpp
src/TX/: coder.cpp
src/channel/: AWGN.cpp  COST207.cpp
src/channel_lib/: AWGN.cpp
src/data_generator/: zmq_loader.cpp  zmq_server.cpp
src/rx_lib/: OFDM_rx.cpp  decoder.cpp  deintervaler.cpp  demodulator.cpp  find_peaks.cpp  rx_run.cpp  test.cpp
src/tx_lib/: OFDM.cpp  OFDM_tx.cpp  coder.cpp  conv_coder.cpp  intervaler.cpp  modulator.cpp  preparing_bits.cpp  tx_run.cpp
tests/: tests.cpp
visualization/: ImGUI_interface.cpp
